# pyftg-sound

./: .gitignore  README.md  pyproject.toml
src/fighting_sound/: sound_manager.py
src/fighting_sound/models/: audio_buffer.py  audio_source.py  sound_renderer.py
src/fighting_sound/openal/: __init__.py  alc.py  soft.py
src/fighting_sound/utils/: dtype.py  openal.py  wave.py
src/pyftg_sound/: audio_buffer.py  audio_source.py  config.py  sound_manager.py  sound_renderer.py  utils.py
src/pyftg_sound/models/: audio_buffer.py  audio_source.py  sound_renderer.py
src/pyftg_sound/openal/: al.py  alc.py  constants.py
src/pyftg_sound/utils/: openal.py
