[project]
name = "pyftg-sound"
version = "0.1"
authors = [
  { name="TeamFightingICE" },
]
description = "A sound library for sound design in DareFightingICE"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  'numpy ~= 1.26.4',
]

[project.urls]
Homepage = "https://github.com/TeamFightingICE/pyftg-sound"
Issues = "https://github.com/TeamFightingICE/pyftg-sound/issues"